Ajout d'un bouton

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -79,7 +79,7 @@
                     <button class="btn btn-outline-dark">Je veux aider</button>
                 </div>
                 <div class="col-6">
-                    <img src="./img/volunteer.jpg" class="img-fluid" />
+ <input type="button" />                   <img src="./img/volunteer.jpg" class="img-fluid" />
                 </div>
             </div>
         </div>
